# rust_coding_test

./: .gitignore  Cargo.toml  README.md
sample_data/: 1.csv  2.csv  3.csv  3.out.csv  4.csv  4.out.csv  5.csv  5.out.csv  6.csv
src/: main.rs
src/cli/: mod.rs
src/exporters/: mod.rs
src/transactions/: account_balance.rs  computation.rs  datasource.rs  dtos.rs  mod.rs  payment.rs  transaction.rs
