[package]
name = "csv-test"
version = "0.1.0"
authors = ["yacine <ybsoft2011@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
serde = { version = "1", features = ["derive"] }
introspection-derive = "0.1"
introspection = "0.1"

